--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=316686CA4A1091E723C48DA2C75CEE9F
+CompanyName=Gauntlet Dwarves
+CompanyDistinguishedName=Gauntlet
+CopyrightNotice=Copyright Thomas Tran 2017
 
 [StartupActions]
 bAddPacks=True
